test/corpus/builtins01.txt
==================
builtins01
==================

cal;
cfg;
enc;
ext;
fts;
math;
pg;
std;
sys;

---

(source_file
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module)))
  (statement
    (expression
      (builtin_module))))
