test/corpus/number04.txt
==================
number04
==================

123.456n;
0.456n;
.01234n;
123e5n;
123e-5n;
123.456e+5n;
0.456e-5n;

---

(source_file
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal))))
  (statement
    (expression
      (literal
        (decimal)))))
