test/corpus/string01.txt
==================
string01
==================

'this is a string';
'this is a "string"';
'this is a \'string\'';
'this is a \"string\"';
'this is \a string';

---

(source_file
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string)))))
