test/corpus/string02.txt
==================
string02
==================

"this is a string";
"this is a 'string'";
"this is a \'string\'";
"this is a \"string\"";
"this is \a string";

---

(source_file
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string))))
  (statement
    (expression
      (literal
        (string)))))
